--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
-<html>
+<html lang="en|fr">
     <head>
         <meta charset="UTF-8">
-        <title>{% block title %}Welcome!{% endblock %}</title>
+        <title>{% block title %}Mini Shop{% endblock %}</title>
         <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text></svg>">
-        {# Run `composer require symfony/webpack-encore-bundle` to start using Symfony UX #}
+        <link href="https://components.axistudio.aximedia.fr/vendor/font-awesome-4/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+
         {% block stylesheets %}
             {{ encore_entry_link_tags('app') }}
         {% endblock %}
@@ -14,6 +15,12 @@
         {% endblock %}
     </head>
     <body>
-        {% block body %}{% endblock %}
+        {% block body %}
+            {% if app.request.attributes.get('_route') != 'home' %}
+                {% include 'page-components/_navbar.html.twig' %}
+                {% include 'page-components/_flash_messages.html.twig' %}
+            {% endif %}
+        {% endblock %}
+        {% include 'page-components/_footer.html.twig' %}
     </body>
 </html>
