--- a/templates/bundles/TwigBundle/Exception/error.html.twig
+++ b/templates/bundles/TwigBundle/Exception/error.html.twig
@@ -26,7 +26,9 @@
                         {% endif %}
 
                         <div class="text-center mt-5">
-                            <a href="{{ path('product_list') }}" class="btn btn-styled btn-base-5 btn-outline btn-circle">{{ 'navigation.go-to-home'|trans({}, 'navigation') }}</a>
+                            <a href="{{ path('product_list') }}" class="btn btn-styled btn-base-5 btn-outline btn-circle">
+                                {{ 'navigation.menu.go-to-home'|trans({}, 'navigation') }}
+                            </a>
                         </div>
                     </div>
                 </div>
