--- a/templates/bundles/TwigBundle/Exception/exception.html.twig
+++ b/templates/bundles/TwigBundle/Exception/exception.html.twig
@@ -27,7 +27,7 @@
 
                         <div class="text-center mt-5">
                             <a href="{{ path('product_list') }}" class="btn btn-styled btn-base-5 btn-outline btn-circle">
-                                {{ 'navigation.go-to-home'|trans({}, 'navigation') }}</a>
+                                {{ 'navigation.menu.go-to-home'|trans({}, 'navigation') }}</a>
                         </div>
                     </div>
                 </div>
