--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -86,3 +86,14 @@ footer {
 .product-title {
     margin-top: 0;
 }
+
+/* Gradient */
+.gradient {
+    background-color: #8BC6EC;
+    background-image: linear-gradient(135deg, #8BC6EC 0%, #242fed 100%);
+}
+
+/* Error pages */
+.page-wrap {
+    min-height: 100vh;
+}
