--- a/templates/page-components/_footer.html.twig
+++ b/templates/page-components/_footer.html.twig
@@ -1,14 +1,8 @@
-<footer class="bg-dark mt-5">
-    <div class="container mt-3 mb-3">
-        <div class="row">
-            <div class="col-md-12 text-center">
-                <div class="copyright mt-3 mb-2 text-white">
-                    <p>© <span>Mini Shop - 2022</span>
-                        <a href="https://www.corinne-aline-poullette.fr" class="transition">
-                            Corinne Aline Poullette
-                        </a> {{ 'main.copyright'|trans({}, 'main') }}.</p>
-                </div>
-            </div>
-        </div>
+<footer class="bg-dark text-center text-lg-start">
+    <div class="copyright mt-3 mb-2 text-white">
+        <p>© <span>Mini Shop - 2022</span>
+            <a href="https://www.corinne-aline-poullette.fr" class="transition">
+                Corinne Aline Poullette
+            </a> {{ 'main.copyright'|trans({}, 'main') }}.</p>
     </div>
 </footer>
