--- a/templates/product/index.html.twig
+++ b/templates/product/index.html.twig
@@ -6,7 +6,7 @@
 
 {% block body %}
     {{ parent() }}
-    <div class="container mb-4 mt-4 pb-5">
+    <div class="container-fluid mb-4 mt-4 pb-5">
         <h1 class="mt-1 mb-1">{{ 'product.list.title'|trans }}</h1>
         <div class="row">
             {% if products|length %}
