--- a/templates/home.html.twig
+++ b/templates/home.html.twig
@@ -11,6 +11,7 @@
             <div class="container d-flex align-items-center justify-content-center text-center h-100 pb-2">
                 <div class="intro-text text-white">
                     <h1 class="mb-3">Mini Shop</h1>
+                    {% include 'page-components/_flash_messages.html.twig' %}
                     <a class="btn btn-outline-light btn-lg m-2" href="{{ path('product_list') }}" role="button"
                        rel="nofollow">{{ 'main.button'|trans({}, 'main') }}</a>
                 </div>
