--- a/templates/cart/cart.html.twig
+++ b/templates/cart/cart.html.twig
@@ -35,6 +35,7 @@
                         </div>
                         {% for product in cart.productLines %}
                         <div class="row">
+                            {% if cart.total %}
                             <div class="col-2">
                                 <a href="{{ path('product_show', {'slug': product.slug}) }}">
                                     <img class="img-thumbnail" src="{{ asset('build/images/' ~ product.image) }}" alt="{{ product.name }}">
@@ -64,6 +65,9 @@
                                     <span class="fa fa-trash"></span>
                                 </a>
                             </div>
+                            {% else %}
+                                <p>{{ 'cart.empty.title'|trans }}</p>
+                            {% endif %}
                         </div>
                         {% if not loop.last %}<hr>{% endif %}
                         {% endfor %}
@@ -73,11 +77,14 @@
                             <div class="col-4 offset-5">
                                 <h4 class="text-right" id="cart-total">{{ 'cart.total.title'|trans }} <strong>{{ cart.total|number_format(2) }} €</strong></h4>
                             </div>
+                            {% if cart.total != 0 %}
                             <div class="col-3">
-                                <a href="{{ path('cart_checkout') }}" type="button" class="btn btn-success btn-block">
+                                <a href="{{ path('cart_checkout') }}"
+                                   type="button" class="btn btn-success btn-block">
                                     <span class="fa fa-shopping-basket"></span> {{ 'cart.action.checkout'|trans }}
                                 </a>
                             </div>
+                            {% endif %}
                         </div>
                     </div>
                 </div>
