--- a/templates/cart/cart.html.twig
+++ b/templates/cart/cart.html.twig
@@ -14,7 +14,7 @@
                         <div class="panel-title">
                             <div class="row">
                                 <div class="col-10 mt-4">
-                                    <h5><span class="fa fa-shopping-cart">()</span>
+                                    <h5><span class="fa fa-shopping-cart">({{ cart.productLines|length }})</span>
                                         {{ 'cart.title'|trans }}
                                     </h5>
                                 </div>
@@ -30,54 +30,54 @@
                     </div>
                     <div class="card-body">
                         {% set cart = app.session.get(session_name) %}
-                        <div class="row">
+                        {% if cart.total > 0 %}
+                            {% for product in cart.productLines %}
+                            <div class="row">
 
-                        </div>
-                        {% for product in cart.productLines %}
-                        <div class="row">
-                            {% if cart.total %}
-                            <div class="col-2">
-                                <a href="{{ path('product_show', {'slug': product.slug}) }}">
-                                    <img class="img-thumbnail" src="{{ asset('build/images/' ~ product.image) }}" alt="{{ product.name }}">
-                                </a>
+                                <div class="col-2">
+                                    <a href="{{ path('product_show', {'slug': product.slug}) }}">
+                                        <img class="img-thumbnail" src="{{ asset('build/images/' ~ product.image) }}" alt="{{ product.name }}">
+                                    </a>
+                                </div>
+                                <div class="col-3">
+                                    <a href="{{ path('product_show', {'slug': product.slug}) }}">
+                                        <h5 class="mt-1 text-warning"><strong>{{ product.name }}</strong></h5>
+                                    </a>
+                                </div>
+                                <div class="col-2">
+                                    <h5 class="mt-1"><strong>{{ product.price|number_format(2) }} €</strong></h5>
+                                </div>
+                                <div class="col-2">
+                                    <input type="number"
+                                           id="quantity-product-{{ product.id }}"
+                                           class="form-control input-sm" value="{{ product.quantity }}"
+                                           data-url="{{ path('cart_refresh') }}"
+                                           data-product-slug="{{ product.slug }}"
+                                    >
+                                </div>
+                                <div class="col-2 text-right">
+                                    <h5 class="strong mt-1" id="subtotal-{{ product.slug }}" data-price="{{ product.price|number_format(2) }}">{{ (product.quantity * product.price)|number_format(2) }} €</h5>
+                                </div>
+                                <div class="col-1 text-right">
+                                    <a type="button" href="{{ path('cart_remove_line', {'slug': product.slug}) }}" class="btn btn-danger btn-xs" title="{{ 'cart.action.remove'|trans }}">
+                                        <span class="fa fa-trash"></span>
+                                    </a>
+                                </div>
+
                             </div>
-                            <div class="col-3">
-                                <a href="{{ path('product_show', {'slug': product.slug}) }}">
-                                    <h5 class="mt-1 text-warning"><strong>{{ product.name }}</strong></h5>
-                                </a>
-                            </div>
-                            <div class="col-2">
-                                <h5 class="mt-1"><strong>{{ product.price|number_format(2) }} €</strong></h5>
-                            </div>
-                            <div class="col-2">
-                                <input type="number"
-                                       id="quantity-product-{{ product.id }}"
-                                       class="form-control input-sm" value="{{ product.quantity }}"
-                                       data-url="{{ path('cart_refresh') }}"
-                                       data-product-slug="{{ product.slug }}"
-                                >
-                            </div>
-                            <div class="col-2 text-right">
-                                <h5 class="strong mt-1" id="subtotal-{{ product.slug }}" data-price="{{ product.price|number_format(2) }}">{{ (product.quantity * product.price)|number_format(2) }} €</h5>
-                            </div>
-                            <div class="col-1 text-right">
-                                <a type="button" href="{{ path('cart_remove_line', {'slug': product.slug}) }}" class="btn btn-danger btn-xs" title="{{ 'cart.action.remove'|trans }}">
-                                    <span class="fa fa-trash"></span>
-                                </a>
-                            </div>
-                            {% else %}
-                                <p>{{ 'cart.empty.title'|trans }}</p>
-                            {% endif %}
-                        </div>
-                        {% if not loop.last %}<hr>{% endif %}
-                        {% endfor %}
+
+                                {% if not loop.last %}<hr>{% endif %}
+                            {% endfor %}
+                        {% else %}
+                            <p>{{ 'cart.empty.title'|trans }}</p>
+                        {% endif %}
                     </div>
                     <div class="card-footer">
                         <div class="row text-center">
                             <div class="col-4 offset-5">
                                 <h4 class="text-right" id="cart-total">{{ 'cart.total.title'|trans }} <strong>{{ cart.total|number_format(2) }} €</strong></h4>
                             </div>
-                            {% if cart.total != 0 %}
+                            {% if cart.total > 0 %}
                             <div class="col-3">
                                 <a href="{{ path('cart_checkout') }}"
                                    type="button" class="btn btn-success btn-block">
